<?xml version="1.0"?>
<package format="2">
  <name>package_template</name>
  <version>1.0.0</version>
  <description>A template for catkin package.</description>

  <maintainer email="junlileeds@gmail.com">Jun Li</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ihcr/package_template</url>

  <author email="junlileeds@gmail.com">Jun Li</author>

  <!-- buildtool_depend for build the packages -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- build_depend: system dependencies -->
  <build_depend>boost</build_depend>

  <!-- depend: build, export, and execution dependency -->
  <depend>eigen</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

</package>